--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.11",
+    "@radix-ui/react-navigation-menu": "^1.2.9",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.85.1",
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-sanity": "^9.10.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sanity": "^3.85.1",
     "styled-components": "^6.1.17",
+    "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.7"
   },
   "devDependencies": {
