--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.11",
     "@radix-ui/react-navigation-menu": "^1.2.9",
+    "@radix-ui/react-tabs": "^1.1.8",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.85.1",
     "class-variance-authority": "^0.7.1",
