--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
     "@radix-ui/react-tabs": "^1.1.8",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.85.1",
+    "@tabler/icons-react": "^3.31.0",
+    "@tailwindcss/cli": "^4.1.5",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
+    "motion": "^12.9.4",
     "next": "15.3.1",
     "next-sanity": "^9.10.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-is": "^19.1.0",
     "resend": "^4.4.1",
     "sanity": "^3.85.1",
     "styled-components": "^6.1.17",
@@ -30,13 +36,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.5",
     "typescript": "^5"
   }
 }
