--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.10",
@@ -30,6 +31,7 @@
     "react-is": "^19.1.0",
     "resend": "^4.4.1",
     "sanity": "^3.85.1",
+    "sitemap": "^8.0.0",
     "styled-components": "^6.1.17",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.7"
