--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sanity/vision": "^3.85.1",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/cli": "^4.1.5",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
