--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.11",
     "lucide-react": "^0.503.0",
     "motion": "^12.9.4",
-    "next": "15.3.1",
+    "next": "^15.3.1",
     "next-sanity": "^9.10.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
