--- a/package.json
+++ b/package.json
@@ -9,25 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.11",
     "@radix-ui/react-navigation-menu": "^1.2.9",
     "@radix-ui/react-tabs": "^1.1.8",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.85.1",
-    "@tabler/icons-react": "^3.31.0",
+    "@tabler/icons-react": "^3.34.1",
     "@tailwindcss/cli": "^4.1.5",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cn": "^0.1.1",
     "framer-motion": "^12.23.11",
     "lucide-react": "^0.503.0",
     "motion": "^12.9.4",
     "next": "^15.3.1",
     "next-sanity": "^9.10.2",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-is": "^19.1.0",
     "resend": "^4.4.1",
