--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "cn": "^0.1.1",
     "framer-motion": "^12.23.11",
     "lucide-react": "^0.503.0",
-    "motion": "^12.9.4",
+    "motion": "^12.23.12",
     "next": "^15.3.1",
     "next-sanity": "^9.10.2",
     "next-themes": "^0.4.6",
@@ -32,6 +32,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-is": "^19.1.0",
+    "react-use-measure": "^2.1.7",
     "resend": "^4.4.1",
     "sanity": "^3.85.1",
     "sitemap": "^8.0.0",
